--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
         <link href="style.css" rel="stylesheet">
     </head>
     <body id="gradient">
-        <h1>Linear Gradient Generator</h1>
+        <h1>Cool Linear Gradient Generator</h1>
         <input type="color" name="color1" id="color1" value="#ffff00">
         <input type="color" name="color2" id="color2" value="#ff0000">
         <h2>Curent css background</h2>
