--- a/index.html
+++ b/index.html
@@ -14,6 +14,6 @@
         <h2>Curent css background</h2>
         <h3></h3>
         <button id="random">Random</button>
-        <script src="script.js"></script>
+        <script src="bundle.js"></script>
     </body>
 </html>
